Fixed #1553 - ButtonBar has wrong position with multiple month on Calendar

--- a/src/components/calendar/Calendar.css
+++ b/src/components/calendar/Calendar.css
@@ -64,7 +64,7 @@
 }
 
 /* Multiple Month DatePicker */
-.p-datepicker-multiple-month {
+.p-datepicker-groups {
     display: flex;
 }
 
